Entity Framework Core Addition - Recrod Insert

--- a/DynamicObjects/appsettings.json
+++ b/DynamicObjects/appsettings.json
@@ -1,13 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "dependencies": {
-    "System.Reflection.Emit": "4.0.1"
+  "ConnectionStrings": {
+    "myconn": "Server=.;Database=Nexawo;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
+  
 }
